Set with to 100% to avoid horiontal scrollbar when vertical scrollbar is present

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
